<resources>
    <string name="app_name">KisanNetworkChallenge</string>
    <string name="contacts">Contacts</string>
    <string name="message">Message</string>
    <string name="contact_name">Name</string>
    <string name="contact_phone">Phone</string>
    <string name="message_view">Message</string>
    <string name="send">SEND</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="otp">OTP : </string>
    <string name="add">Add</string>
</resources>
