<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_name"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/contact_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_phone_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/contact_phone"
                app:layout_constraintTop_toBottomOf="@id/contact_name_view">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/contact_phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/send_message_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@android:color/white"
                android:backgroundTintMode="multiply"
                android:padding="12dp"
                android:text="@string/send_message"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="4dp"
                app:layout_constraintTop_toBottomOf="@id/contact_phone_view"
                app:rippleColor="@android:color/white" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>